syntax = "proto3";

option go_package = "proto/user";

package user;

import "google/api/annotations.proto";

service UserService {
  rpc Login(Request) returns (Response) {
    option (google.api.http) = {
      post: "/"
      body: "*"
    };
  }
}

message Request {
  string username = 1;
  string password = 2;
}

message Response {
  string accessToken = 3;
}